--- a/overstack-app/src/Pages/LoginPage.css
+++ b/overstack-app/src/Pages/LoginPage.css
@@ -81,6 +81,25 @@
 .signup_two1{
     line-height: 40px;
 }
+.use_signout{
+    background-color: rgb(231, 219, 219);
+    position: absolute;
+    left: 30%;
+    top: 20%;
+    width: 40%;
+    height: 100vh;
+    align-items: center;
+}
+.use_signout_btn{
+    background-color: brown;
+    color: white;
+    font-size: 20px;
+    margin: auto;
+    margin-top: 400px;
+    margin-left: 140px;
+    width: 50%;
+    padding: 15px 0;
+}
 @media screen and (max-width:1000px) {
     .signup_signin{
         grid-template-columns: repeat(1,1fr);
