--- a/overstack-app/src/Component/SideList.css
+++ b/overstack-app/src/Component/SideList.css
@@ -20,6 +20,8 @@
     border-radius:50% ;
 }
 .list_one_three{
+    margin-top: 15px;
+    margin-right: 40px;;
     font-size: 18px;
     color: black;
 }
