--- a/overstack-app/src/Pages/ListPage.css
+++ b/overstack-app/src/Pages/ListPage.css
@@ -1,6 +1,8 @@
 .listpage_one{
-    width: 60%;
+    width: 80%;
     margin: auto;
+    margin-top: 140px;;
+   margin-bottom: 50px;
     display: grid;
     grid-template-columns: repeat(2,1fr);
 }
