--- a/overstack-app/src/Pages/Cart.css
+++ b/overstack-app/src/Pages/Cart.css
@@ -1,6 +1,8 @@
 .cart_page{
     width: 95%;
     margin: auto;
+    margin-top: 130px;
+    margin-bottom: 60px;
     display: flex;
     gap: 10px;
 }
@@ -14,12 +16,12 @@
     border: 1px solid black;
     text-align: center;
     font-size: 50px;
-    height:200px;
 }
 .cart_two{
     font-size: 20px;
     display: flex;
     justify-content: space-between;
+    font-weight: 700
 }
 .cart_three{
     font-size: 16px;
@@ -30,7 +32,41 @@
     font-size: 25px;
     display: flex;
     justify-content: space-between;
+    font-weight: 700
+
 }
 .cart_three span{
     color: red;
 }
+.MugCart{
+    margin: auto;
+    margin-top: 30px;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+  gap:10px;
+  font-family:Helvetica Neue,Helvetica,Arial,sans-serif;
+  color:#444;
+}
+ 
+ .MugChild1{
+    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 20px;
+    }
+ .MugChild1>div>h1{
+    color: black;
+    font-weight: 600;
+   padding-left: 80px;
+ }
+ .MugChild1>div>p{
+    padding: 10px;
+    font-size: 12px;
+ }
+ .MugChild1>div>h3{
+    font-weight: 600;
+    font-size: 10px;
+    padding-left: 10px;
+    padding-bottom: 10px;
+    text-decoration: line-through;
+ }
