--- a/overstack-app/src/Component/AdminAdd.css
+++ b/overstack-app/src/Component/AdminAdd.css
@@ -1,5 +1,12 @@
 .admin_add{
-    width: 50%;
-    margin-top: 140px;
-    text-align: center;
+    margin:auto;
+    margin-top: 10px;
+    width:25%;
+    padding:10px;
+    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+margin-bottom: 50px;
+    
 }
+/* h1{
+    text-align: center;
+} */
