--- a/overstack-app/src/Component/Navbar/navbar.css
+++ b/overstack-app/src/Component/Navbar/navbar.css
@@ -15,7 +15,7 @@ body {
 }
 .overstockIndex {
   margin-top: 10px;
-  height: 20px;
+  height: 30px;
 }
 img {
   cursor: pointer;
@@ -103,16 +103,18 @@ img {
 
 .header .class-input input {
   width: 100%;
-  height: 79%;
+  height: 90%;
   outline: none;
   border: 1px solid #dadcdf;
   border-radius: 4px 0 0 4px;
   background-color: #f9fafb;
   font-size: 16px;
-  padding: 0px 1.5%;
+
 }
 .header .class-input {
   display: flex;
+  margin-top: 7px;
+
 }
 .header .class-input > div:nth-child(1) {
   width: 100%;
