--- a/overstack-app/src/Component/home/Home.css
+++ b/overstack-app/src/Component/home/Home.css
@@ -1,6 +1,8 @@
 
 button {
     font-size: calc(10px + 2vmin);
+    
+    
   }
   .banner {
     position: relative;
@@ -8,15 +10,21 @@ button {
     text-align: center;
     overflow: hidden;
     margin-top: 90px;
+    
+
   }
   
   .bannerDiv {
     display: flex;
+    
+
   }
   
   .bannerimg1 {
     width: 100%;
     height: intrinsic;
+    
+    
   }
   
   .bannerimg2 {
@@ -25,6 +33,8 @@ button {
     top: 0;
     left: 0;
     z-index: 1;
+    
+    
   }
   /* ------------Limited Offers CSS */
   .limitedtimeHeadingDiv {
@@ -32,6 +42,8 @@ button {
     display: flex;
     justify-content: center;
     margin-top: 3rem;
+    
+
   }
   
   .limitedtimeHeading {
@@ -40,18 +52,26 @@ button {
     color: #2f3337;
     line-height: 1.2;
     margin: 0 0 3.2rem;
+    
+
   }
   
   .limitedtimeDiv {
     width: 100%;
+    
+
   }
   
   .universalSpacing {
     padding: 3.2rem 0;
+    
+
   }
   
   .universalSpacingX {
     padding: 2.4rem;
+    
+
   }
   
   .offerContainer,
@@ -60,6 +80,7 @@ button {
     grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
     width: 89%;
     margin: auto;
+    ;
   
     grid-row-gap: 4rem;
     grid-column-gap: 3rem;
@@ -72,9 +93,13 @@ button {
     /* align-items: left; */
     grid-row-gap: 4rem;
     grid-column-gap: 3rem;
+    
+
   }
   .offerCard {
     width: 14.5rem;
+    
+
   }
   .offerCard a {
     text-decoration: none;
@@ -90,6 +115,8 @@ button {
     height: 100%;
     text-align: center;
     width: 100%;
+    
+
   }
   
   .offerCardImgDiv,
@@ -98,11 +125,15 @@ button {
     min-width: 100%;
     padding-bottom: 100%;
     position: relative;
+    
+
   }
   
   .offerCardTitleDiv,
   .categoryCardTitleDiv {
     padding: 0.8rem 1.6rem 0;
+    
+
   }
   
   .offerCardImg,
@@ -115,6 +146,8 @@ button {
     font-weight: 700;
     margin: 0;
     color: #2f336f;
+    
+
   }
   
   .categoryCardTitle {
@@ -127,6 +160,8 @@ button {
     flex-wrap: wrap;
     margin: 0 -0.4rem -1.6rem;
     color: #2f3337;
+    
+
   }
   /* --------------Banner Section -------- */
   section#banner {
@@ -135,6 +170,8 @@ button {
   
   .banner img {
     width: 98%;
+    
+
   }
   section#banner .banner_content {
     position: absolute;
@@ -144,6 +181,8 @@ button {
     text-align: center;
     width: 80%;
     color: black;
+    
+
   }
   section#banner {
     background-image: url(../../image/low-banner.jpg);
@@ -152,15 +191,21 @@ button {
   }
   .banner_content h1 {
     font-size: 36px;
+    ;
+
     word-spacing: 0px;
   }
   .banner_content h4 {
     font-size: 26px;
     line-height: 20px;
+    
+
   }
   .banner_content p {
     font-size: 13px;
     font-weight: bold;
+    
+
   }
   .banner_content .btn_cont button {
     padding: 9px 13px;
@@ -172,32 +217,46 @@ button {
     transition: all 0.3s ease-in;
     font-weight: 300;
     font-size: 18px;
+    
+
   }
   .banner_content .btn_cont button:hover {
     background-color: rgb(49, 47, 47);
+    
+    
   }
   /* slider  */
   .sliderCardDiv {
     padding: 20px 0;
+    
+    
   }
   
   .imgslider {
     width: 96%;
     margin: auto;
     margin-bottom: 5rem;
+    
+
   }
   .slide_info img {
     width: 90%;
+    
+
   }
   
   .limitedtimeHeading {
     font-size: 27px;
     margin-top: 1rem;
+    
+
   }
   .slides {
     background-color: rgb(254, 251, 251);
     width: 93%;
     margin-top: 0px;
+    ;
+
     padding-bottom: 20px;
   }
   /* footer css */
@@ -212,10 +271,14 @@ button {
     flex-direction: column;
     overflow-x: auto;
     overflow-y: hidden;
+    
+
   }
   
   #footerContainer a {
     color: white;
+    
+
   }
   
   .box1Footer {
@@ -251,6 +314,8 @@ button {
   
     margin-top: 0.7rem;
     margin-bottom: 0.7rem;
+    
+
   }
   
   .infoDiv > .headInfoFooter {
@@ -258,19 +323,24 @@ button {
     margin-top: 3.6rem;
     margin-bottom: 5px;
     line-height: 1.5;
+    
+
   }
   
   .copyrightSec {
     font-size: 12px;
     line-height: 1.5;
     margin: 0.9rem 7rem;
+    
+
   }
   
   .privacySec {
     font-size: 12px;
     line-height: 1.5;
-    margin-left: 20rem;
+    /* margin-left: 20rem; */
     margin-top: 2.5rem;
+    
   }
   
   .privacySec > a {
