--- a/overstack-app/src/Pages/Cart.css
+++ b/overstack-app/src/Pages/Cart.css
@@ -1,18 +1,21 @@
-.cart_page{
+
+    .cart_page{
     width: 95%;
     margin: auto;
     margin-top: 130px;
     margin-bottom: 60px;
     display: flex;
     gap: 10px;
-}
+} 
 .cart_main{
     border: 1px solid black;
     padding: 10px;
     width:25%;
+    min-width: 300px;
 }
 .cart_data{
     width: 70%;
+    min-width: 400px;
     border: 1px solid black;
     text-align: center;
     font-size: 50px;
@@ -33,7 +36,6 @@
     display: flex;
     justify-content: space-between;
     font-weight: 700
-
 }
 .cart_three span{
     color: red;
@@ -42,12 +44,11 @@
     margin: auto;
     margin-top: 30px;
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(auto-fit, minmax(220px,1fr) );
   gap:10px;
   font-family:Helvetica Neue,Helvetica,Arial,sans-serif;
   color:#444;
 }
- 
  .MugChild1{
     box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
     margin-left: 10px;
@@ -70,3 +71,9 @@
     padding-bottom: 10px;
     text-decoration: line-through;
  }
+ @media (max-width:800px){
+    .cart_page{
+        flex-direction: column-reverse;
+    }
+ }
+ 
