--- a/overstack-app/src/Component/AdminPages/AdminAdd.css
+++ b/overstack-app/src/Component/AdminPages/AdminAdd.css
@@ -2,7 +2,7 @@
     margin:auto;
     margin-top: 10px;
     width:25%;
-    min-width:300px
+    min-width:300px;
     padding:10px;
     box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
 margin-bottom: 50px;
